--- a/public/index.html
+++ b/public/index.html
@@ -421,7 +421,7 @@
           <div class="skills__phone _anim-items">
             <div class="">
               <div class="skills__phone__mag _anim-items">
-                <div id="q1" class="skills__phone__q none" >
+                <div id="q1" class="skills__phone__q " >
                   <p>Виберемо карту?</p>
                     <button class="" id="v1_1">Так</button>
                     <button class="" id="v1_2">Ні</button>
