--- a/public/index.html
+++ b/public/index.html
@@ -665,7 +665,7 @@
               <button id="v33">7 Пік</button>
             </div>
             
-            <div id="q37" class="skills__phone__q " >
+            <div id="q37" class="skills__phone__q none" >
               <p>Домовились</p>
               <button id="v37">7 Пік</button>
             </div>
